--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,5 +6,11 @@
 			<!-- responsive site template freebie<br />
 			crafted by <a href="http://html5up.net">HTML5 UP</a>. -->
 		</h1>
+		<ul class="alt">
+			<li>About Me</li>
+			<li>Work History</li>
+			<li>Education</li>
+			<li>Projects</li>
+		</ul>
 		</div>
 	</header>
