--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,10 +3,10 @@
 	<div class="inner">
 		<ul class="icons">
 			<li><a href="#" class="icon brands fa-linkedin"><span class="label"></span></a></li>
-			<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+			<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
 			<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-			<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-			<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+			<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+			<!-- <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li> -->
 		</ul>
 		<ul class="copyright">
 			<li>&copy; David Kes</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
