--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,16 @@
 <!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+			<a href="https://davidkes.github.io/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 			<h1><strong>I am David</strong>, a Data Scientist<br />
 			<!-- responsive site template freebie<br />
 			crafted by <a href="http://html5up.net">HTML5 UP</a>. -->
 		</h1>
 		<ul class="alt">
-			<li><a href='#about_me'>About Me</a></li>
-			<li><a href='#experience'>Experience</a></li>
-			<li><a href='#education'>Education</a></li>
-			<li><a href='#projects'>Projects</a></li>
+			<li><a href='https://davidkes.github.io/#about_me'>About Me</a></li>
+			<li><a href='https://davidkes.github.io/#experience'>Experience</a></li>
+			<li><a href='https://davidkes.github.io/#education'>Education</a></li>
+			<li><a href='https://davidkes.github.io/#projects'>Projects</a></li>
 		</ul>
 		</div>
 	</header>
