--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2572,6 +2572,23 @@ input, select, textarea {
 			margin: 0;
 		}
 
+
+/* Education */
+
+.education-block h3 {
+	font-weight: 500;
+	float: left;
+	margin: 0;
+}
+.education-block h4 {
+	float: left;
+	margin: 0;
+}
+
+.education-block span {
+	float: right
+}
+
 /* Header */
 
 	#header {
