--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,10 +7,14 @@
 			crafted by <a href="http://html5up.net">HTML5 UP</a>. -->
 		</h1>
 		<ul class="alt">
-			<li><a href='https://davidkes.github.io/#about_me'>About Me</a></li>
+			<!-- <li><a href='https://davidkes.github.io/#about_me'>About Me</a></li>
 			<li><a href='https://davidkes.github.io/#experience'>Experience</a></li>
 			<li><a href='https://davidkes.github.io/#education'>Education</a></li>
-			<li><a href='https://davidkes.github.io/#projects'>Projects</a></li>
+			<li><a href='https://davidkes.github.io/#projects'>Projects</a></li> -->
+			<li><a href='#about_me'>About Me</a></li>
+			<li><a href='#experience'>Experience</a></li>
+			<li><a href='#education'>Education</a></li>
+			<li><a href='#projects'>Projects</a></li>
 		</ul>
 		</div>
 	</header>
