--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2562,11 +2562,65 @@ input, select, textarea {
 		}
 
 		.work-item h3 {
-			font-size: 1em;
-			margin: 0 0 0.5em 0;
+			/*font-size: 1em;*/
+			/*margin: 0 0 0.5em 0;*/
+			color: #787878;
 		}
 
 		.work-item p {
+			font-size: 0.8em;
+			line-height: 1.5em;
+			margin: 0;
+		}
+
+/* Work Item */
+
+	.work-item {
+		margin: 0 0 2em 0;
+	}
+
+		.work-item .image {
+			margin: 0 0 1.5em 0;
+		}
+
+		.work-item h3 {
+			/*font-size: 1em;*/
+			/*margin: 0 0 0.5em 0;*/
+			color: #787878;
+			margin: 0;
+		}
+		.work-item h4 {
+			/*font-size: 1em;*/
+			/*margin: 0 0 0.5em 0;*/
+			color: #787878;
+			margin: 0;
+		}
+
+		.work-item p {
+			font-size: 0.8em;
+			line-height: 1.5em;
+			margin: 0;
+		}
+/* Education Item */
+
+	.education-item {
+		margin: 0 0 2em 0;
+	}
+
+		.education-item .image {
+			margin: 0 0 1.5em 0;
+		}
+
+		.education-item h3 {
+			/*font-size: 1em;*/
+			margin: 0;
+		}
+
+		.education-item h3 .education-date{
+			float:right;
+		}
+
+		.education-item p {
 			font-size: 0.8em;
 			line-height: 1.5em;
 			margin: 0;
@@ -2684,7 +2738,7 @@ input, select, textarea {
 	#main {
 		margin-left: 35%;
 		max-width: 54em;
-		padding: 8em 4em 4em 4em;
+		padding:  4em 4em 4em 4em;
 		width: calc(100% - 35%);
 	}
 
@@ -2697,7 +2751,7 @@ input, select, textarea {
 			#main > section:first-child {
 				border-top: 0;
 				margin-top: 0;
-				padding-top: 0;
+				padding-top: 2em;
 			}
 
 /* Poptrox */
