--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="https://davidkes.github.io/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+			<a href="https://davidkes.github.io/" class="image avatar"><img src="images/me.jpg" alt="" /></a>
 			<h1><strong>I am David</strong>, a Data Scientist<br />
 			<!-- responsive site template freebie<br />
 			crafted by <a href="http://html5up.net">HTML5 UP</a>. -->
@@ -14,7 +14,7 @@
 			<li><a href='#about_me'>About Me</a></li>
 			<li><a href='#experience'>Experience</a></li>
 			<li><a href='#education'>Education</a></li>
-			<li><a href='#projects'>Projects</a></li>
+			<!-- <li><a href='#projects'>Projects</a></li> -->
 		</ul>
 		</div>
 	</header>
