--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2075,10 +2075,12 @@ input, select, textarea {
 			display: block;
 			height: 100%;
 			left: 0;
-			opacity: 0.5;
+			opacity: 0.1;
 			position: absolute;
 			top: 0;
 			width: 100%;
+			color: black;
+			border: solid 2px;
 		}
 
 		.image.thumb {
