--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 	<header id="header">
 		<div class="inner">
 			<a href="https://davidkes.github.io/" class="image avatar"><img src="images/me.jpg" alt="" /></a>
-			<h1><strong>I am David</strong>, a Data Scientist<br />
+			<h1><strong>David Kes</strong>, Data Engineer<br />
 			<!-- responsive site template freebie<br />
 			crafted by <a href="http://html5up.net">HTML5 UP</a>. -->
 		</h1>
@@ -14,6 +14,7 @@
 			<li><a href='#about_me'>About Me</a></li>
 			<li><a href='#experience'>Experience</a></li>
 			<li><a href='#education'>Education</a></li>
+			<li><a href='#certification'>Certification</a></li>
 			<!-- <li><a href='#projects'>Projects</a></li> -->
 		</ul>
 		</div>
